--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -34,7 +34,7 @@
             <h2>What to Expect</h2>
                 <p>In this guide, we'll go over all the elements you need to know to customize your keyboard however you'd like. However, there's a lot of information to cover, which can get pretty overwhelming at times. So, I've created a list of the order in which you should go through the information present on this page below.</p>
             <ol>
-                <li>Keyboard layouts and PCBs</li>
+                <li>Keyboard <a href="layouts.html#layout">layouts</a> and PCBs</li>
                 <li>Materials keyboards are made of and why we add foams inside</li>
                 <li>Different types of Switches</li>
                 <li>Different types of Keycaps</li>
