--- a/03hand-coding/layouts.html
+++ b/03hand-coding/layouts.html
@@ -28,7 +28,7 @@
         </nav>
         <!--START OF CONTENT-->
         <main>
-            <h1>Layouts</h1>
+            <h1 id="layout">Layouts</h1>
             <h2>What are Keyboard Layouts?</h2>
                 <p>A Keyboard layout refers to the both the <strong>size</strong> of the keyboard and the <strong>style</strong>. Keyboard sizes include: 65%, 85%, and others. Styles include your standard rectangular keyboards, as well as alice and split keyboards.</p>
             <h2>Size</h2>
